cfn_benchmark/cfn_templates/iksena__llm-iac-data-analysis/cfn_benchmark__cfn_templates__Tianyi2__IRIS__data__cloudformation_collected_templates_new__template_10045_472088274.yaml
Resources:
  vpcA2121C38:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.0.0.0/16
      EnableDnsHostnames: true
      EnableDnsSupport: true
      InstanceTenancy: default
      Tags:
        - Key: Name
          Value: AwsInfraStack/vpc
    Metadata:
      aws:cdk:path: AwsInfraStack/vpc/Resource
  vpcpublicSubnet1SubnetA635257E:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: 10.0.0.0/24
      VpcId:
        Ref: vpcA2121C38
      AvailabilityZone:
        Fn::Select:
          - 0
          - Fn::GetAZs: ""
      MapPublicIpOnLaunch: true
      Tags:
        - Key: aws-cdk:subnet-name
          Value: public
        - Key: aws-cdk:subnet-type
          Value: Public
        - Key: Name
          Value: AwsInfraStack/vpc/publicSubnet1
    Metadata:
      aws:cdk:path: AwsInfraStack/vpc/publicSubnet1/Subnet
  vpcpublicSubnet1RouteTableA38152FE:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
        Ref: vpcA2121C38
      Tags:
        - Key: Name
          Value: AwsInfraStack/vpc/publicSubnet1
    Metadata:
      aws:cdk:path: AwsInfraStack/vpc/publicSubnet1/RouteTable
  vpcpublicSubnet1RouteTableAssociationB46101B8:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: vpcpublicSubnet1RouteTableA38152FE
      SubnetId:
        Ref: vpcpublicSubnet1SubnetA635257E
    Metadata:
      aws:cdk:path: AwsInfraStack/vpc/publicSubnet1/RouteTableAssociation
  vpcpublicSubnet1DefaultRouteF0973989:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId:
        Ref: vpcpublicSubnet1RouteTableA38152FE
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId:
        Ref: vpcIGWE57CBDCA
    DependsOn:
      - vpcVPCGW7984C166
    Metadata:
      aws:cdk:path: AwsInfraStack/vpc/publicSubnet1/DefaultRoute
  vpcpublicSubnet2Subnet027D165B:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: 10.0.1.0/24
      VpcId:
        Ref: vpcA2121C38
      AvailabilityZone:
        Fn::Select:
          - 1
          - Fn::GetAZs: ""
      MapPublicIpOnLaunch: true
      Tags:
        - Key: aws-cdk:subnet-name
          Value: public
        - Key: aws-cdk:subnet-type
          Value: Public
        - Key: Name
          Value: AwsInfraStack/vpc/publicSubnet2
    Metadata:
      aws:cdk:path: AwsInfraStack/vpc/publicSubnet2/Subnet
  vpcpublicSubnet2RouteTableA6135437:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
        Ref: vpcA2121C38
      Tags:
        - Key: Name
          Value: AwsInfraStack/vpc/publicSubnet2
    Metadata:
      aws:cdk:path: AwsInfraStack/vpc/publicSubnet2/RouteTable
  vpcpublicSubnet2RouteTableAssociation73F6478A:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: vpcpublicSubnet2RouteTableA6135437
      SubnetId:
        Ref: vpcpublicSubnet2Subnet027D165B
    Metadata:
      aws:cdk:path: AwsInfraStack/vpc/publicSubnet2/RouteTableAssociation
  vpcpublicSubnet2DefaultRoute13685A07:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId:
        Ref: vpcpublicSubnet2RouteTableA6135437
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId:
        Ref: vpcIGWE57CBDCA
    DependsOn:
      - vpcVPCGW7984C166
    Metadata:
      aws:cdk:path: AwsInfraStack/vpc/publicSubnet2/DefaultRoute
  vpcisolatedSubnet1Subnet06BBE51F:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: 10.0.2.0/28
      VpcId:
        Ref: vpcA2121C38
      AvailabilityZone:
        Fn::Select:
          - 0
          - Fn::GetAZs: ""
      MapPublicIpOnLaunch: false
      Tags:
        - Key: aws-cdk:subnet-name
          Value: isolated
        - Key: aws-cdk:subnet-type
          Value: Isolated
        - Key: Name
          Value: AwsInfraStack/vpc/isolatedSubnet1
    Metadata:
      aws:cdk:path: AwsInfraStack/vpc/isolatedSubnet1/Subnet
  vpcisolatedSubnet1RouteTable7903AE22:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
        Ref: vpcA2121C38
      Tags:
        - Key: Name
          Value: AwsInfraStack/vpc/isolatedSubnet1
    Metadata:
      aws:cdk:path: AwsInfraStack/vpc/isolatedSubnet1/RouteTable
  vpcisolatedSubnet1RouteTableAssociation66413364:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: vpcisolatedSubnet1RouteTable7903AE22
      SubnetId:
        Ref: vpcisolatedSubnet1Subnet06BBE51F
    Metadata:
      aws:cdk:path: AwsInfraStack/vpc/isolatedSubnet1/RouteTableAssociation
  vpcisolatedSubnet2Subnet51F71E92:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: 10.0.2.16/28
      VpcId:
        Ref: vpcA2121C38
      AvailabilityZone:
        Fn::Select:
          - 1
          - Fn::GetAZs: ""
      MapPublicIpOnLaunch: false
      Tags:
        - Key: aws-cdk:subnet-name
          Value: isolated
        - Key: aws-cdk:subnet-type
          Value: Isolated
        - Key: Name
          Value: AwsInfraStack/vpc/isolatedSubnet2
    Metadata:
      aws:cdk:path: AwsInfraStack/vpc/isolatedSubnet2/Subnet
  vpcisolatedSubnet2RouteTableD2247699:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
        Ref: vpcA2121C38
      Tags:
        - Key: Name
          Value: AwsInfraStack/vpc/isolatedSubnet2
    Metadata:
      aws:cdk:path: AwsInfraStack/vpc/isolatedSubnet2/RouteTable
  vpcisolatedSubnet2RouteTableAssociation14DFC38E:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: vpcisolatedSubnet2RouteTableD2247699
      SubnetId:
        Ref: vpcisolatedSubnet2Subnet51F71E92
    Metadata:
      aws:cdk:path: AwsInfraStack/vpc/isolatedSubnet2/RouteTableAssociation
  vpcIGWE57CBDCA:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: AwsInfraStack/vpc
    Metadata:
      aws:cdk:path: AwsInfraStack/vpc/IGW
  vpcVPCGW7984C166:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId:
        Ref: vpcA2121C38
      InternetGatewayId:
        Ref: vpcIGWE57CBDCA
    Metadata:
      aws:cdk:path: AwsInfraStack/vpc/VPCGW
  SharedPostgresDBSubnetGroup26388B5F:
    Type: AWS::RDS::DBSubnetGroup
    Properties:
      DBSubnetGroupDescription: Subnet group for SharedPostgresDB database
      SubnetIds:
        - Ref: vpcpublicSubnet1SubnetA635257E
        - Ref: vpcpublicSubnet2Subnet027D165B
    Metadata:
      aws:cdk:path: AwsInfraStack/SharedPostgresDB/SubnetGroup/Default
  SharedPostgresDBSecurityGroup36825BC7:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Security group for SharedPostgresDB database
      SecurityGroupEgress:
        - CidrIp: 0.0.0.0/0
          Description: Allow all outbound traffic by default
          IpProtocol: "-1"
      VpcId:
        Ref: vpcA2121C38
    Metadata:
      aws:cdk:path: AwsInfraStack/SharedPostgresDB/SecurityGroup/Resource
  AwsInfraStackSharedPostgresDBSecret5263DAAD3fdaad7efa858a3daf9490cf0a702aeb:
    Type: AWS::SecretsManager::Secret
    Properties:
      Description:
        Fn::Join:
          - ""
          - - "Generated by the CDK for stack: "
            - Ref: AWS::StackName
      GenerateSecretString:
        ExcludeCharacters: " %+~`#$&*()|[]{}:;<>?!'/@\"\\"
        GenerateStringKey: password
        PasswordLength: 30
        SecretStringTemplate: '{"username":"postgres"}'
    UpdateReplacePolicy: Delete
    DeletionPolicy: Delete
    Metadata:
      aws:cdk:path: AwsInfraStack/SharedPostgresDB/Secret/Resource
  SharedPostgresDBSecretAttachment1C9542A9:
    Type: AWS::SecretsManager::SecretTargetAttachment
    Properties:
      SecretId:
        Ref: AwsInfraStackSharedPostgresDBSecret5263DAAD3fdaad7efa858a3daf9490cf0a702aeb
      TargetId:
        Ref: SharedPostgresDB15FE96DE
      TargetType: AWS::RDS::DBInstance
    Metadata:
      aws:cdk:path: AwsInfraStack/SharedPostgresDB/Secret/Attachment/Resource
  SharedPostgresDB15FE96DE:
    Type: AWS::RDS::DBInstance
    Properties:
      DBInstanceClass: db.t4g.micro
      AllocatedStorage: "5"
      CopyTagsToSnapshot: true
      DBSubnetGroupName:
        Ref: SharedPostgresDBSubnetGroup26388B5F
      Engine: postgres
      EngineVersion: "13.4"
      MasterUsername: postgres
      MasterUserPassword:
        Fn::Join:
          - ""
          - - "{{resolve:secretsmanager:"
            - Ref: AwsInfraStackSharedPostgresDBSecret5263DAAD3fdaad7efa858a3daf9490cf0a702aeb
            - :SecretString:password::}}
      PubliclyAccessible: true
      StorageType: gp2
      VPCSecurityGroups:
        - Fn::GetAtt:
            - SharedPostgresDBSecurityGroup36825BC7
            - GroupId
    UpdateReplacePolicy: Snapshot
    DeletionPolicy: Snapshot
    Metadata:
      aws:cdk:path: AwsInfraStack/SharedPostgresDB/Resource
  SharedECSCluster119A3831:
    Type: AWS::ECS::Cluster
    Metadata:
      aws:cdk:path: AwsInfraStack/SharedECSCluster/Resource
  montystackNestedStackmontystackNestedStackResource316B0BAA:
    Type: AWS::CloudFormation::Stack
    Properties:
      TemplateURL:
        Fn::Join:
          - ""
          - - https://s3.
            - Ref: AWS::Region
            - "."
            - Ref: AWS::URLSuffix
            - /
            - Fn::Sub: cdk-hnb659fds-assets-${AWS::AccountId}-${AWS::Region}
            - /861a57abfee01c5929a2c67c161296ed8506d6c839eedc22e128e1c6c55926ab.json
      Parameters:
        referencetoAwsInfraStackSharedECSCluster2C634209Arn:
          Fn::GetAtt:
            - SharedECSCluster119A3831
            - Arn
        referencetoAwsInfraStackvpcpublicSubnet1SubnetB2B5A5A3Ref:
          Ref: vpcpublicSubnet1SubnetA635257E
        referencetoAwsInfraStackvpcpublicSubnet2Subnet1F530DC4Ref:
          Ref: vpcpublicSubnet2Subnet027D165B
        referencetoAwsInfraStackSharedPostgresDBSecretAttachment59D9CBD0Ref:
          Ref: SharedPostgresDBSecretAttachment1C9542A9
        referencetoAwsInfraStackvpc96413F22Ref:
          Ref: vpcA2121C38
    UpdateReplacePolicy: Delete
    DeletionPolicy: Delete
    Metadata:
      aws:cdk:path: AwsInfraStack/monty-stack.NestedStack/monty-stack.NestedStackResource
      aws:asset:path: AwsInfraStackmontystackF3CE8D81.nested.template.json
      aws:asset:property: TemplateURL
  CDKMetadata:
    Type: AWS::CDK::Metadata
    Properties:
      Analytics: v2:deflate64:H4sIAAAAAAAA/12RTW+DMAyGf0vvIRtoh11bKlU9DUHV62SC16WFBCVOqwrlvy98FNBOdh6/8es4CY8/+PsGHjYS1S2qZcm7gkDcWEDfHYqEd+dWsPRHnbOUZa6spShcqZB6tmS5doQnKGtc+MK21mohgaRWs5hlRt6BcOlxVIQm5IdAH/CcTKfTlsJYvw0qYgUKZyQ9D0a7drBbA89MZXm3B4ISLB6VJVAC2egz39nv1uClDp3MOMx+97rpmR2obUDBBQ3vRsteOIYTmAvSasJZ8L/iGYowXFo7G97a66bUe5aj1c6IYYFfjlo39hl+o1/aqpxqVcl+m54pXSG/2rd7/MnjhMebq5UyMk6RbJDnY/wD6DsL1ucBAAA=
    Metadata:
      aws:cdk:path: AwsInfraStack/CDKMetadata/Default
    Condition: CDKMetadataAvailable
Outputs:
  dbSecret:
    Description: Datatbase secret name
    Value:
      Fn::Join:
        - "-"
        - - Fn::Select:
              - 0
              - Fn::Split:
                  - "-"
                  - Fn::Select:
                      - 6
                      - Fn::Split:
                          - ":"
                          - Ref: AwsInfraStackSharedPostgresDBSecret5263DAAD3fdaad7efa858a3daf9490cf0a702aeb
          - Fn::Select:
              - 1
              - Fn::Split:
                  - "-"
                  - Fn::Select:
                      - 6
                      - Fn::Split:
                          - ":"
                          - Ref: AwsInfraStackSharedPostgresDBSecret5263DAAD3fdaad7efa858a3daf9490cf0a702aeb
    Export:
      Name: dbSecret
Conditions:
  CDKMetadataAvailable:
    Fn::Or:
      - Fn::Or:
          - Fn::Equals:
              - Ref: AWS::Region
              - af-south-1
          - Fn::Equals:
              - Ref: AWS::Region
              - ap-east-1
          - Fn::Equals:
              - Ref: AWS::Region
              - ap-northeast-1
          - Fn::Equals:
              - Ref: AWS::Region
              - ap-northeast-2
          - Fn::Equals:
              - Ref: AWS::Region
              - ap-south-1
          - Fn::Equals:
              - Ref: AWS::Region
              - ap-southeast-1
          - Fn::Equals:
              - Ref: AWS::Region
              - ap-southeast-2
          - Fn::Equals:
              - Ref: AWS::Region
              - ca-central-1
          - Fn::Equals:
              - Ref: AWS::Region
              - cn-north-1
          - Fn::Equals:
              - Ref: AWS::Region
              - cn-northwest-1
      - Fn::Or:
          - Fn::Equals:
              - Ref: AWS::Region
              - eu-central-1
          - Fn::Equals:
              - Ref: AWS::Region
              - eu-north-1
          - Fn::Equals:
              - Ref: AWS::Region
              - eu-south-1
          - Fn::Equals:
              - Ref: AWS::Region
              - eu-west-1
          - Fn::Equals:
              - Ref: AWS::Region
              - eu-west-2
          - Fn::Equals:
              - Ref: AWS::Region
              - eu-west-3
          - Fn::Equals:
              - Ref: AWS::Region
              - me-south-1
          - Fn::Equals:
              - Ref: AWS::Region
              - sa-east-1
          - Fn::Equals:
              - Ref: AWS::Region
              - us-east-1
          - Fn::Equals:
              - Ref: AWS::Region
              - us-east-2
      - Fn::Or:
          - Fn::Equals:
              - Ref: AWS::Region
              - us-west-1
          - Fn::Equals:
              - Ref: AWS::Region
              - us-west-2
Parameters:
  BootstrapVersion:
    Type: AWS::SSM::Parameter::Value<String>
    Default: /cdk-bootstrap/hnb659fds/version
    Description: Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]
Rules:
  CheckBootstrapVersion:
    Assertions:
      - Assert:
          Fn::Not:
            - Fn::Contains:
                - - "1"
                  - "2"
                  - "3"
                  - "4"
                  - "5"
                - Ref: BootstrapVersion
        AssertDescription: CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI.
